--- a/html5up-editorial (2)/index.html
+++ b/html5up-editorial (2)/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Lily Samuel Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/heart-rate-monitor-illustration-heartbeat.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/Heart%20Disease%20Analysis.pdf" class="image"><img src="images/heart-rate-monitor-illustration-heartbeat.jpg" alt="" /></a>
 											<h3>Analysing and Graphing Heart Disease Data in RStudio</h3>
 											<p>Using the tidyverse and ggplot2 libraries, I examined relationships and associations between twelve different variables relating to heart disease. My analysis is shown through graphs and tables. </p>
 											<ul class="actions">
@@ -56,7 +56,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/breastcancer.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/Breast%20Cancer.pdf" class="image"><img src="images/breastcancer.jpg" alt="" /></a>
 											<h3>Bivariate Correspondance and Multiple Correspondance Analysis on
 												Breast Cancer Data in RStudio</h3>
 											<p>Using the ggpubr, FactoMineR, kableExtra, and factoextra libraries, I performed Bivariate Correspondance and Multiple Correspondance Analysis on breast cancer data. Results are shown through balloon plots, factor maps, and written observations. </p>
@@ -66,7 +66,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/istockphoto-1297401631-170667a.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/Wine.PCA.pdf" class="image"><img src="images/istockphoto-1297401631-170667a.jpg" alt="" /></a>
 											<h3>Principal Component Analysis on Wine Data in RStudio</h3>
 											<p>Using the tinytex, factoextra, FactoMineR, and GGally libraries, I performed PCA on wine data. Found eigenvalues for all principal components, plottd and interpreted components, determined the smallest number of principal components that can be used to summarize the information from the data.</p>
 											<ul class="actions">
@@ -75,7 +75,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/gettyimages-112780877.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/Neural-Networks.pdf" class="image"><img src="images/gettyimages-112780877.jpg" alt="" /></a>
 											<h3>Creating Neural Network Functions using Penguin Data in RStudio</h3>
 											<p>Using the dplr and neuralnet libraries, I, step-by-step, created a function that returns a tibble where each row contains the Average Training and Average Test squared error for fitting a two-layer neural network at all possible combinations of numbers of hidden nodes at each layer.</p>
 											<ul class="actions">
@@ -85,7 +85,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/5301521.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/KNN.Kidney.pdf" class="image"><img src="images/5301521.jpg" alt="" /></a>
 											<h3>Kth Nearest Neighbour Analysis on Kidney Data in RStudio</h3>
 											<p>Using the FNN library, I plotted various KNN predictions using a data on functioning kidneys. I then assessed which value of k gives the best prediction.</p>
 											<ul class="actions">
@@ -94,7 +94,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/4680600.jpg" alt="" /></a>
+											<a href="https://github.com/lilysamuel/portfolio/blob/main/H%20Index.pdf" class="image"><img src="images/4680600.jpg" alt="" /></a>
 											<h3>H Index with Movie Data in RStudio</h3>
 											<p>Using the utils and dplyr libraries, I subset, cleaned, and organized movie data, then created a general H index function.</p>
 											<ul class="actions">
